# bilbo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
data/examples/forcefields/: charmm36_mapping.csv  martini3_mapping.csv
data/examples/lipids/: BSM.yaml  CHOL.yaml  CL.yaml  DPPC.yaml  DPPE.yaml  DPPG.yaml  DPPS.yaml  POPC.yaml  POPE.yaml  POPG.yaml  POPS.yaml  SAPI.yaml
data/examples/peptides/: AMP01.yaml  AMP01_upper_parallel.yaml
data/examples/presets/: ecoli_inner_membrane_default.yaml  mammalian_pm_asymmetric_default.yaml
data/examples/topologies/: martini_v3_lipids.itp
src/bilbo/: __init__.py  cli.py
src/bilbo/builders/: __init__.py  apl_check.py  composition_expander.py  geometry.py  leaflet_layout.py  peptide_placer.py  sorting.py
src/bilbo/db/: __init__.py  repository.py  schema.py
src/bilbo/downloaders/: __init__.py  base.py  charmm_gui.py  registry.py
src/bilbo/exporters/: __init__.py  allatom_preview.py  gro_exporter.py  (+6 more)
tests/: conftest.py  test_apl_check.py  test_audit.py  test_charmm_gui_archive_extractor.py  test_cli.py  test_composition_expander.py  test_downloaders.py  test_e2e_membrane_pdb.py  test_forcefield_mapping_extractor.py  test_leaflet_layout.py  test_lipid_yaml_extractor.py  test_membrane_from_pdb.py  test_models.py  test_peptide_models.py  test_peptide_placer.py  test_preset_yaml_extractor.py  test_preview_exporters.py  test_topology_scanner.py  test_visualization_scripts.py
tests/fixtures/: charmm_gui_lipid_archive_fixture.html
web/: app.py
web/static/: index.html
(+20 files in other folders)
